--- a/Labs/Lab2/CSS/stylesheet.css
+++ b/Labs/Lab2/CSS/stylesheet.css
@@ -1,5 +1,5 @@
 /*Text*/
-h1, h2, p {
+h1, h2, p, ol, li {
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
 }
@@ -31,10 +31,8 @@ a {
 }
 /*Team List*/
 ol, li {
-    font-family: 'Courier New', Courier, monospace;
     font-size: 1em;
     padding: 5px;
-    text-align: center;
     list-style-position: inside;
     margin-left: auto;
     margin-right: auto;
